--- a/LigaPro-CalvaJ_RodriguezJ_RualesM/Views/Shared/_Layout.cshtml
+++ b/LigaPro-CalvaJ_RodriguezJ_RualesM/Views/Shared/_Layout.cshtml
@@ -3,16 +3,20 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - LigaPro_CalvaJ_RodriguezJ_RualesM</title>
+    <title>@ViewData["Title"] - LigaPro</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/LigaPro_CalvaJ_RodriguezJ_RualesM.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/styles.css" asp-append-version="true" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Anton&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">LigaPro_CalvaJ_RodriguezJ_RualesM</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index"><img class="logo" src="~/images/ligaPro.png" />  Liga Pro Ecuador</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -23,7 +27,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Equipos" asp-action="Index">Equipos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Jugadores" asp-action="Index">Jugadores</a>
                         </li>
                     </ul>
                 </div>
@@ -38,8 +45,8 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2025 - LigaPro_CalvaJ_RodriguezJ_RualesM - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-        </div>
+			&copy; 2025 - LigaPro - Johann Calva, Jean Rodriguez y Mathias Ruales - Ingenieria de Software
+		</div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
