Agrega controladores, vistas, repositorios e interfaces para equipo y jugador

--- a/LigaPro-CalvaJ_RodriguezJ_RualesM/Views/Jugadores/Delete.cshtml
+++ b/LigaPro-CalvaJ_RodriguezJ_RualesM/Views/Jugadores/Delete.cshtml
@@ -30,6 +30,12 @@
             @Html.DisplayFor(model => model.NumeroCamiseta)
         </dd>
         <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Posicion)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Posicion)
+        </dd>
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Goles)
         </dt>
         <dd class = "col-sm-10">
