--- a/LigaPro-CalvaJ_RodriguezJ_RualesM/Views/Jugadores/Edit.cshtml
+++ b/LigaPro-CalvaJ_RodriguezJ_RualesM/Views/Jugadores/Edit.cshtml
@@ -29,6 +29,11 @@
                 <span asp-validation-for="NumeroCamiseta" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="Posicion" class="control-label"></label>
+                <input asp-for="Posicion" class="form-control" />
+                <span asp-validation-for="Posicion" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="Goles" class="control-label"></label>
                 <input asp-for="Goles" class="form-control" />
                 <span asp-validation-for="Goles" class="text-danger"></span>
