--- a/LigaPro-CalvaJ_RodriguezJ_RualesM/Views/Jugadores/Index.cshtml
+++ b/LigaPro-CalvaJ_RodriguezJ_RualesM/Views/Jugadores/Index.cshtml
@@ -22,6 +22,9 @@
                 @Html.DisplayNameFor(model => model.NumeroCamiseta)
             </th>
             <th>
+                @Html.DisplayNameFor(model => model.Posicion)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.Goles)
             </th>
             <th>
@@ -47,6 +50,9 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.NumeroCamiseta)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Posicion)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Goles)
