--- a/LigaPro-CalvaJ_RodriguezJ_RualesM/Views/Shared/_Layout.cshtml
+++ b/LigaPro-CalvaJ_RodriguezJ_RualesM/Views/Shared/_Layout.cshtml
@@ -32,6 +32,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Jugadores" asp-action="Index">Jugadores</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Jugadores" asp-action="Destacados">Destacados</a>
+                        </li>
                     </ul>
                 </div>
             </div>
