Se añadio el View "gastos", donde se puede visualizar los 5 equipos que gastan mas

--- a/LigaPro-CalvaJ_RodriguezJ_RualesM/Views/Shared/_Layout.cshtml
+++ b/LigaPro-CalvaJ_RodriguezJ_RualesM/Views/Shared/_Layout.cshtml
@@ -35,6 +35,8 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Jugadores" asp-action="Destacados">Destacados</a>
                         </li>
+						<li class="nav-item">
+							<a class="nav-link text-dark" asp-area="" asp-controller="Equipos" asp-action="Gastos">Gastos</a>
                     </ul>
                 </div>
             </div>
